Fix seeders and and update tests
